clang/test/CIR/Transforms/abi-lowering/indirect-call-nyi.cir
// RUN: not cir-opt %s -cir-call-conv-lowering="classification-attr=test_classify" \
// RUN:     2>&1 | FileCheck %s

!s32i = !cir.int<s, 32>

#ignore_first_arg = {
  return = { kind = "direct" },
  args   = [ { kind = "ignore" }, { kind = "direct" } ]
}

#passthrough = {
  return = { kind = "direct" },
  args   = [ { kind = "direct" }, { kind = "direct" }, { kind = "direct" } ]
}

module attributes {
  dlti.dl_spec = #dlti.dl_spec<#dlti.dl_entry<i32, dense<32>: vector<2xi64>>>
} {

  cir.func @callee(%arg0: !s32i, %arg1: !s32i) -> !s32i
      attributes { test_classify = #ignore_first_arg } {
    cir.return %arg1 : !s32i
  }

  cir.func @caller(%fp: !cir.ptr<!cir.func<(!s32i, !s32i) -> !s32i>>,
                   %arg0: !s32i, %arg1: !s32i) -> !s32i
      attributes { test_classify = #passthrough } {
    %0 = cir.call %fp(%arg0, %arg1)
        : (!cir.ptr<!cir.func<(!s32i, !s32i) -> !s32i>>, !s32i, !s32i) -> !s32i
    cir.return %0 : !s32i
  }

}

// CHECK: error: 'cir.call' op indirect call not yet implemented in CallConvLowering
